apps/relax-sounds/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: relax-sounds
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: relax-sounds
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: relax-sounds-ingress
  namespace: relax-sounds
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: relax-sounds
      app.kubernetes.io/instance: relax-sounds
      app.kubernetes.io/name: relax-sounds
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
